--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -497,6 +497,39 @@ img {
 
 
 /*==================== PORTFOLIO ====================*/
+.portfolio__container{
+  overflow: initial;
+}
+
+.portfolio__content{
+  padding: 0 1.5rem;
+}
+
+.portfolio__img {
+  width: 265px;
+  border-radius: .5rem;
+  justify-self: center;
+}
+
+.portfolio__title{
+  font-size: var(--h3-font-size);
+  margin-bottom: var(--mb-0-5);
+}
+
+/* 1.30.42 */
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /*==================== PROJECT IN MIND ====================*/
