--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,9 +11,9 @@
     --hue-color: 250; /*Purple 250 - Green 142 - Blue 230 - Pink 340*/
 
     /* HSL color mode */
-    --first-color: hsl(var(--hue-color), 69%, 61%);
-    --first-color-second: hsl(var(--hue-color), 69%, 61%);
-    --first-color-alt: hsl(var(--hue-color), 57%, 53%);
+    --first-color: #E75A7C;
+    --first-color-second: #2C363F;
+    --first-color-alt: #E75A7C;
     --first-color-lighter: hsl(var(--hue-color), 92%, 85%);
     --title-color: hsl(var(--hue-color), 8%, 15%);
     --text-color: hsl(var(--hue-color), 8%, 45%);
@@ -23,6 +23,7 @@
     --container-color: #fff;
     --scroll-bar-color: hsl(var(--hue-color), 12%, 90%);
     --scroll-thumb-color: hsl(var(--hue-color), 12%, 80%);
+    --white-color: #fff;
 
     /*========== Font and typography ==========*/
     --body-font: 'Poppins', sans-serif;
@@ -76,6 +77,8 @@
 /*========== Button Dark/Light ==========*/
 
 
+
+
 /*==================== BASE ====================*/
 * {
   box-sizing: border-box;
@@ -114,6 +117,14 @@ img {
   height: auto;
 }
 
+
+/* .hr{
+  margin-top: 20px;
+  width: 20vw;
+  display: flex;
+  justify-content: center;
+} */
+
 /*==================== REUSABLE CSS CLASSES ====================*/
 .section {
   padding: 2rem 0 4rem;
@@ -137,7 +148,7 @@ img {
 
 /*==================== LAYOUT ====================*/
 .container {
-  max-width: 768px;
+  max-width: 1028px;
   margin-left: var(--mb-1-5);
   margin-right: var(--mb-1-5);
 }
@@ -252,17 +263,32 @@ img {
 
 
 /*==================== HOME ====================*/
+.home{
+  height: 100vh;
+  background-color: #2C363F;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
 .home__container {
   gap: 1rem;
 }
 
-.home__content {
-  grid-template-columns: .5fr 3fr;
-  padding-top: 3.5rem;
-  align-items: center;
+.home__name {
+  color: var(--first-color)
 }
 
-.home__social {
+.home__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 3.5rem;
+}
+
+/* .home__social {
   display: grid;
   grid-template-columns: max-content;
   row-gap: 1rem;
@@ -284,25 +310,31 @@ img {
 
 .home__blob-img {
   width: 170px;
-}
+} */
 
 .home__data {
-  grid-column: 1/3;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .home__title {
   font-size: var(--big-font-size);
+  color: white;
+  margin-bottom: var(--mb-1);
 }
 
 .home__subtitle{
   font-size: var(--h3-font-size);
-  color: var(--text-color);
+  color: white;
   font-weight: var(--font-medium);
-  margin-bottom: var(--mb-0-75);
+  margin-bottom: var(--mb-1);
 }
 
 .home__description {
   margin-bottom: var(--mb-2);
+  color: white
 }
 
 .home__scroll {
@@ -324,7 +356,7 @@ img {
 
 .home__scroll-name {
   font-size: var(--small-font-size);
-  color: var(--title-color);
+  color: var(--white-color);
   font-weight: var(--font-medium);
   margin-right: var(--mb-0-25);
 }
@@ -345,6 +377,7 @@ img {
 
 .button:hover {
   background-color: var(--first-color-alt);
+  color: white;
 }
 
 .button__icon {
@@ -365,6 +398,7 @@ img {
   border-radius: .5rem;
   justify-self: center;
   align-self: center;
+  border-radius: 50%;
 }
 
 .about__description {
@@ -401,6 +435,14 @@ img {
 /*==================== SKILLS ====================*/
 .skills__container{
   row-gap: 0;
+}
+
+.skills__list{
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  grid-template-rows: repeat(2,1fr);
+  justify-content: left;
+  align-items: center;
 }
 
 .skills__header{
@@ -460,7 +502,7 @@ img {
   background-color: var(--first-color-lighter);
 }
 
-.skills__percentage{
+/* .skills__percentage{
   display: block;
   background-color: var(--first-color);
 }
@@ -477,6 +519,21 @@ img {
 }
 .skills__react {
   width: 60%;
+} */
+
+.skills__data{
+  display: flex;
+  justify-content: left;
+  align-items: center;
+}
+
+.skills__icon-sub {
+  font-size: 1.5rem;
+  color: var(--first-color)
+}
+
+.skills__icon-sub{
+  margin-right: var(--mb-0-75);
 }
 
 .skills__close .skills__list{
@@ -511,9 +568,10 @@ img {
 }
 
 .portfolio__img {
-  width: 265px;
+  width: 400px;
   border-radius: .5rem;
   justify-self: center;
+  border: 1px solid lightgray
 }
 
 .portfolio__title{
@@ -523,6 +581,13 @@ img {
 
 .portfolio__description{
   margin-bottom: var(--mb-0-75)
+}
+
+.portfolio__button {
+  border: .1rem solid var(--first-color);
+  color: var(--first-color);
+  background-color: #fff;
+  padding: .75rem;
 }
 
 .portfolio__button:hover .button__icon{
@@ -570,6 +635,9 @@ img {
 /*==================== CONTACT ME ====================*/
 .contact__container{
   row-gap:3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .contact__information{
@@ -614,6 +682,7 @@ img {
   outline: none;
   padding: .25rem .5rem .5rem 0;
 }
+
 
 /*==================== FOOTER ====================*/
 .footer{
@@ -718,19 +787,24 @@ img {
 /*==================== MEDIA QUERIES ====================*/
 /* For small devices */
 @media screen and (max-width: 350px){
+
+ 
   .container{
     margin-left:var(--mb-1);
     margin-right:var(--mb-1)
   }
+
+  
+
   .nav__menu{
     padding:2rem .25rem 4rem;
   }
   .nav__list{
     column-gap: 0;
   }
-  .home__content{
+  /* .home__content{
     grid-template-columns: .25fr 3fr;
-  }
+  } */
   .home__blob{
     width:180px
   }
@@ -742,17 +816,25 @@ img {
   .project__img{
     width: 200px;
   }
+
+  .home__scroll-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;  
+  }
 }
 
 /* For medium devices */
 @media screen and (min-width: 568px){
-  .home__content{
-    grid-template-columns: max-content 1fr 1fr;
+  /* .home__content{
+    display: flex;
+    flex-direction: column;
+
   }
 
   .home__data{
     grid-column: initial;
-  }
+  } */
 
   .home__img{
     order: 1;
@@ -765,7 +847,6 @@ img {
   }
   
   .portfolio__content,
-  .contact__container,
   .footer__container{
     grid-template-columns: repeat(2,1fr);
   }
@@ -790,8 +871,9 @@ img {
   }
 
   .header{
-    top:0;
     bottom:initial;
+    position: sticky;
+    top: 0;
   }
 
   .header,
@@ -834,14 +916,19 @@ img {
   }
 
   .home__scroll{
-    display: block;
+    /* display: block; */
+    display: flex;
+    justify-content: center;
   }
 
   .home__scroll-button{
-    margin-left: 3rem;
+    display: flex;
+    justify-content: center;
+    /* margin-left: 3rem; */
   }
 
   .about__container{
+    grid-template-columns: 1fr 2fr;
     column-gap: 5rem;
   }
 
@@ -914,15 +1001,17 @@ img {
 
 /* For large devices */
 @media screen and (min-width: 1028px){
+
+
 .header,
 .main,
 .footer__container{
   padding: 0
 }
 
-.home__blob{
+/* .home__blob{
   width: 320px;
-}
+} */
 
 .home__social{
   transform: translateX(-6rem);
@@ -949,7 +1038,7 @@ img {
 }
 
 .contact__form{
-  width: 460px;  
+  width: 50vw;  
 }
 
 .contact__inputs{
@@ -958,4 +1047,5 @@ img {
 
 
 }
+
 
