--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -683,6 +683,11 @@ img {
   padding: .25rem .5rem .5rem 0;
 }
 
+.send__message-button {
+  display: flex;
+  justify-content: center;
+}
+
 
 /*==================== FOOTER ====================*/
 .footer{
